welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:24: error: not found: value compteurCouleur
  compteurCouleur = 0
  ^MethodsPicture:26: error: not found: value compteurCouleur
    compteurCouleur match{
    ^MethodsPicture:27: error: value Yellow is not a member of object java.awt.Color
    	case 0 => makeV(Color.Yellow)
                              ^MethodsPicture:28: error: value Red is not a member of object java.awt.Color
    	case 1 => makeV(Color.Red)
                              ^MethodsPicture:29: error: value Blue is not a member of object java.awt.Color
    	case 2 => makeV(Color.Blue)
                              ^MethodsPicture:30: error: value Green is not a member of object java.awt.Color
    	case 3 => makeV(Color.Green)
                              ^MethodsPicture:32: error: not found: value compteurCouleur
    compteurCouleur = compteurCouleur + 1 
    ^