welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() {
  for (i<- 1 to 2){
  	makePattern()
  }
}


def makePattern() {
  /** trace une ligne de 2 carres puis change de ligne */
  for (j <- 1 to 2){
  	carre()
  	forward(7)
  }
  // Changement de ligne
  left()
  forward(7)
  right()
}


def carre() {
  
  //sert ? changer de couleur
  compteurCouleur = 0
  for (i <- 1 to 4){
    compteurCouleur match{
    	case 0 => makeV(Color.Yellow)
    	case 1 => makeV(Color.Red)
    	case 2 => makeV(Color.Blue)
    	case 3 => makeV(Color.Green)
    } 
    compteurCouleur = compteurCouleur + 1 
  }
}

def paint() {
  brushDown()
  brushUp()
}
def makeV(c : Color) {
  setBrushColor(c)
  
  forward(2)
  paint()
  forward();left();forward();
  paint()
  backward();right();forward()
  paint()
  forward(2)
  left()
}